@@ -1,3 +1,13 @@
+2012-06-01  Filip Pizlo  <fpizlo@apple.com>
+
+        DFG constant folding should be OK with GetLocal of captured variables having a constant
+        https://bugs.webkit.org/show_bug.cgi?id=88137
+
+        Reviewed by Gavin Barraclough.
+
+        * dfg/DFGConstantFoldingPhase.cpp:
+        (JSC::DFG::ConstantFoldingPhase::run):
+
 2012-05-31  Mark Hahnenberg  <mhahnenberg@apple.com>
 
         JSGlobalObject does not mark m_privateNameStructure
